--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/6de6aa5275.js" crossorigin="anonymous"></script>
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -12,7 +13,8 @@
 <body style="background-color: black;">
     <header class="header">
         <a href="index.html"><img class="logo" src="img/logo.svg" alt="logo"></a>
-        <nav>
+        <i class="fas fa-bars"></i>
+        <nav class="navigation">
             <ul class="nav-ul">
                 <div class="nav-li-wraper">
                     <li>About Me</li>
