add section2 responsive

--- a/index.html
+++ b/index.html
@@ -49,5 +49,59 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container1">
+            <div class="calendar-wraper">
+                <img class="section2-img" src="img/image1.jpg" alt="computer image">
+                <div class="calendar">
+                    <div class="h1-06">
+                         <h1><span class="span1">06</span> <br>Years of Experience</h1>
+                    </div>
+                    <div class="calendar-divs">
+                        <div class="c-div"></div>
+                        <div class="c-div"></div>
+                        <div class="c-div"></div>
+                        <div class="c-div"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills">
+                <h1 class="skills-h1">Read About My Life <br>Struggle Story!</h1>
+                <p class="skills-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam <br>rem aperiam, eaque ipsa quae ab illo inventore veritatis et is the quasi<br> architecto beatae vitae dicta sunt explicabo.</p>
+                <div class="languges-wraper">
+                    <h4 class="languges">WORDPRESS 100%</h4>
+                    <div class="languges-borders">
+                        <div class="border1"></div>
+                        <div class="border2"></div>
+                    </div>
+                </div>
+                <div class="languges-wraper">
+                    <h4 class="languges">HTML 75%</h4>
+                    <div class="languges-borders">
+                        <div class="border3"></div>
+                        <div class="border4"></div>
+                    </div>
+                </div>
+                <div class="languges-wraper">
+                    <h4 class="languges">PHP 85%</h4>
+                    <div class="languges-borders">
+                        <div class="border5"></div>
+                        <div class="border6"></div>
+                    </div>
+                </div>
+                <div class="languges-wraper">
+                    <h4 class="languges">CSS 95%</h4>
+                    <div class="languges-borders">
+                        <div class="border7"></div>
+                        <div class="border8"></div>
+                    </div>
+                </div>
+                <div class="info-divs-wraper">
+                    <div class="hire">Hire Me!</div>
+                    <div class="about">About Me</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
