--- a/index.html
+++ b/index.html
@@ -103,5 +103,73 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container2">
+            <h1>Our Services</h1>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore <p>veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p></p>
+            <div class="service-wraper">
+                <div class="vertical1">
+                    <div class="wordpress">
+                        <div class="icon-wraper1">
+                            <i class="fab fa-wordpress"></i>
+                        </div>
+                        <h2 class="icon-h2">Wordpress</h2>
+                    </div>
+                    <div class="html">
+                        <div class="icon-wraper2">
+                            <i class="fab fa-html5"></i>
+                        </div>
+                        <h2 class="icon-h2">HTML</h2>
+                    </div>
+                    <div class="wordpress">
+                        <div class="icon-wraper1">
+                            <i class="fas fa-laptop-code"></i>
+                        </div>
+                        <h2 class="icon-h2">Web Developement</h2>
+                    </div>
+                </div>
+                <div class="vertical2">
+                    <div class="html">
+                        <div class="icon-wraper2">
+                            <i class="fab fa-css3-alt"></i>
+                        </div>
+                        <h2 class="icon-h2">CSS</h2>
+                    </div>
+                    <div class="wordpress">
+                        <div class="icon-wraper1">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <h2 class="icon-h2">PHP</h2>
+                    </div>
+                    <div class="html">
+                        <div class="icon-wraper2">
+                            <i class="fas fa-puzzle-piece"></i>
+                        </div>
+                        <h2 class="icon-h2">Problem Solving</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="background-wraper">
+            <div class="box-wraper">
+                <div class="box1">
+                    <h1>50+</h1>
+                    <p>Clients</p>
+                </div>
+                <div class="box2">
+                    <h1>68</h1>
+                    <p>Projects</p>
+                </div>
+                <div class="box1">
+                    <h1>30</h1>
+                    <p>Awards</p>
+                </div>
+                <div class="box2 bb">
+                    <h1>06</h1>
+                    <p>Years Experience</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
