add section3 responsive

--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore <p>veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p></p>
             <div class="service-wraper">
                 <div class="vertical1">
-                    <div class="wordpress">
+                    <div class="wordpress w1">
                         <div class="icon-wraper1">
                             <i class="fab fa-wordpress"></i>
                         </div>
                         <h2 class="icon-h2">Wordpress</h2>
                     </div>
-                    <div class="html">
+                    <div class="html w2">
                         <div class="icon-wraper2">
                             <i class="fab fa-html5"></i>
                         </div>
                         <h2 class="icon-h2">HTML</h2>
                     </div>
-                    <div class="wordpress">
+                    <div class="wordpress w3">
                         <div class="icon-wraper1">
                             <i class="fas fa-laptop-code"></i>
                         </div>
@@ -129,19 +129,19 @@
                     </div>
                 </div>
                 <div class="vertical2">
-                    <div class="html">
+                    <div class="html w4">
                         <div class="icon-wraper2">
                             <i class="fab fa-css3-alt"></i>
                         </div>
                         <h2 class="icon-h2">CSS</h2>
                     </div>
-                    <div class="wordpress">
+                    <div class="wordpress w5">
                         <div class="icon-wraper1">
                             <i class="fas fa-code"></i>
                         </div>
                         <h2 class="icon-h2">PHP</h2>
                     </div>
-                    <div class="html">
+                    <div class="html w6">
                         <div class="icon-wraper2">
                             <i class="fas fa-puzzle-piece"></i>
                         </div>
@@ -160,7 +160,7 @@
                     <h1>68</h1>
                     <p>Projects</p>
                 </div>
-                <div class="box1">
+                <div class="box1 aa">
                     <h1>30</h1>
                     <p>Awards</p>
                 </div>
