add slick slider

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/6de6aa5275.js" crossorigin="anonymous"></script>
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="slick.css">
+	<link href="https://kenwheeler.github.io/slick/slick/slick-theme.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -171,5 +173,44 @@
             </div>
         </div>
     </section>
+    <section id="slick">
+        <h1 class="slick-h1">Testimonials</h1>
+        <p class="slick-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore <br>veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p>
+		<div class="slider multiple-items">
+                <div class="slider_item">
+                    <div class="mask-div">
+                        <div class="child-div">
+                            <h1>John Doe</h1>
+                            <h2>CEO Abc Company</h2>
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p></p>
+                        </div>
+                        <img class="mask-image1" src="img/mask2.png" alt="image">
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="mask-div">
+                        <div class="child-div">
+                            <h1>John Doe</h1>
+                            <h2>CEO Abc Company</h2>
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p></p>
+                        </div>
+                        <img class="mask-image1" src="img/mask1.png" alt="image">
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="mask-div">
+                        <div class="child-div">
+                            <h1>John Doe</h1>
+                            <h2>CEO Abc Company</h2>
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p></p>
+                        </div>
+                        <img class="mask-image1" src="img/mask2.png" alt="image">
+                    </div>
+                </div>
+		</div>
+	</section>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="slick.min.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
