--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
                     <h1>68</h1>
                     <p>Projects</p>
                 </div>
-                <div class="box1 aa">
+                <div class="box3">
                     <h1>30</h1>
                     <p>Awards</p>
                 </div>
-                <div class="box2 bb">
+                <div class="box4">
                     <h1>06</h1>
                     <p>Years Experience</p>
                 </div>
