--- a/index.html
+++ b/index.html
@@ -12,27 +12,26 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
-<body style="background-color: black;">
+<body class="body">
     <header class="header">
         <a href="index.html"><img class="logo" src="img/logo.svg" alt="logo"></a>
         <i class="fas fa-bars"></i>
         <nav class="navigation">
             <ul class="nav-ul">
                 <div class="nav-li-wraper">
-                    <li>About Me</li>
+                    <li><a class="aa" href="#about me">About Me</a></li>
                 </div>
-                <li class="nav-li">Services</li>
-                <li class="nav-li">Portfolio</li>
-                <li class="nav-li">Testimonials</li>
-                <li class="nav-li">Blog</li>
+                <li class="nav-li"><a class="aa" href="#service">Services</a></li>
+                <li class="nav-li"><a class="aa" href="#portfolio">Portfolio</a></li>
+                <li class="nav-li"><a class="aa" href="#slick">Testimonials</a></li>
                 <li class="nav-li">Contact Us</li>
                 <div class="nav-li-wraper2">
-                    <li>Hire Me!</li>
+                    <li><a class="aa" href="#">Hire Me!</a></li>
                 </div>
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="about me">
         <div class="section1-wraper">
             <div class="portfolio-wraper">
                 <div class="hello-wraper">
@@ -51,7 +50,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="portfolio">
         <div class="container1">
             <div class="calendar-wraper">
                 <img class="section2-img" src="img/image1.jpg" alt="computer image">
@@ -105,7 +104,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="service">
         <div class="container2">
             <h1>Our Services</h1>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore <p>veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p></p>
@@ -212,5 +211,8 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="slick.min.js"></script>
 	<script src="script.js"></script>
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
