--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="nav-li"><a class="aa" href="#service">Services</a></li>
                 <li class="nav-li"><a class="aa" href="#portfolio">Portfolio</a></li>
                 <li class="nav-li"><a class="aa" href="#slick">Testimonials</a></li>
-                <li class="nav-li">Contact Us</li>
+                <li class="nav-li"><a class="aa" href="#contact us">Contact Us</a></li>
                 <div class="nav-li-wraper2">
                     <li><a class="aa" href="#">Hire Me!</a></li>
                 </div>
@@ -211,8 +211,66 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="slick.min.js"></script>
 	<script src="script.js"></script>
-    <footer class="footer">
-
+    <footer id="contact us" class="footer">
+        <div class="container3">
+            <div class="contact-wraper">
+                <div class="contact">
+                    <h2>Contact Us</h2>
+                    <p>Let's make something new, different and more meaningful <p class="p2">or make thing more visual or conceptual?</p></p>
+                    <div class="call">
+                        <div class="icon1">
+                            <img src="img/phone.svg" alt="icon">
+                        </div>
+                        <div class="number1">
+                            <h2>Call Me</h2>
+                            <p>+123 456 7890</p>
+                        </div>
+                    </div>
+                    <div class="call">
+                        <div class="icon1">
+                            <img src="img/mail.svg" alt="icon">
+                        </div>
+                        <div class="number1">
+                            <h2>Email</h2>
+                            <p>info@coder.com</p>
+                        </div>
+                    </div>
+                    <div class="call">
+                        <div class="icon1">
+                            <img src="img/location.svg" alt="icon">
+                        </div>
+                        <div class="number1">
+                            <h2>Address</h2>
+                            <p>27 Division St, New York,<p> NY 10002, USA</p></p>
+                        </div>
+                    </div>
+                    <h1 class="find">Find Me on</h1>
+                    <div class="icons-wraper">
+                        <div class="wraper">
+                            <img class="social" src="img/behance.svg" alt="icon">
+                            <img class="social" src="img/dribbble.svg" alt="icon">
+                            <img class="social" src="img/insta.svg" alt="icon">
+                            <img class="social" src="img/linked in.svg" alt="icon">
+                            <img src="img/pinterest.svg" alt="icon">
+                        </div>
+                    </div>
+                </div>
+                <div class="submit-wraper">
+                    <h1 class="drop">Drop a Line</h1>
+                    <div class="input-wraper">
+                        <input class="input" type="text" placeholder="Name" required>
+                        <input class="input2" type="email" placeholder="Email" required>
+                    </div>
+                    <div class="input-wraper2">
+                        <input class="input" type="text" placeholder="Phone#" required>
+                        <input class="input2" type="email" placeholder="Budget" required>
+                    </div>
+                    <input class="textarea" type="textarea" name="" id="textarea" placeholder="Message">
+                    <button class="button">Submit</button>
+                </div>
+            </div>
+            <h1 class="footer-h1">Copyright ©2019Coder. All Rights Reserved.</h1>
+        </div>
     </footer>
 </body>
 </html>
