add footer responsive

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             <img class="social" src="img/dribbble.svg" alt="icon">
                             <img class="social" src="img/insta.svg" alt="icon">
                             <img class="social" src="img/linked in.svg" alt="icon">
-                            <img src="img/pinterest.svg" alt="icon">
+                            <img class="pint" src="img/pinterest.svg" alt="icon">
                         </div>
                     </div>
                 </div>
