--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="john weary">
+    <meta name="keywords" content="web development,UI/UX Designe,coding,html,css,wordpress,php">
+    <meta name="author" content="mikeil jalabadze">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta property="og:url"                content="https://github.com/mishojalabadze/mishojalabadzeportfolio" />
+    <meta property="og:type"               content="portfolio" />
+    <meta property="og:title"              content="Jonh Weary portfolio" />
+    <meta property="og:description"        content="John Weary skills and projects " />
+    <meta property="og:image"              content="img/image1.jpg" /> 
+    <title>John Weary</title>
     <script src="https://kit.fontawesome.com/6de6aa5275.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="slick.css">
 	<link href="https://kenwheeler.github.io/slick/slick/slick-theme.css" rel="stylesheet"/>
@@ -19,11 +27,11 @@
             </ul>
             <div class="ul-wraper">
                 <ul id="menu" class="menu-ul">
-                    <li><a class="nav-a nav1" href="#">About Me</a></li>
-                    <li><a class="nav-a nav2" href="#">Services</a></li>
-                    <li><a class="nav-a nav3" href="#">Portfolio</a></li>
-                    <li><a class="nav-a" href="#">Testimonials</a></li>
-                    <li><a class="nav-a ab" href="#">Contact Us</a></li>
+                    <li><a class="nav-a nav1" href="#about me">About Me</a></li>
+                    <li><a class="nav-a nav2" href="#service">Services</a></li>
+                    <li><a class="nav-a nav3" href="#portfolio">Portfolio</a></li>
+                    <li><a class="nav-a" href="#slick">Testimonials</a></li>
+                    <li><a class="nav-a ab" href="#contact us">Contact Us</a></li>
                     <div class="nav-li-wraper">
                         <li><a class="nav-a a1" href="#">Hire Me!</a></li>
                     </div>
@@ -43,8 +51,8 @@
                 <h1 class="portfolio-h1">Mr. John Weary</h1>
                 <h2 class="portfolio-h2">A Professional Web Developer and UI/UX Designer.</h2>
                 <div class="divs-wraper">
-                    <div class="download"><p>Download CV</p></div>
-                    <div class="mywork"><p>My Work</p></div>
+                    <div class="download"><a href="#"><p>Download CV</p></a></div>
+                    <div class="mywork"><a href="#"><p>My Work</p></a></div>
                 </div>
             </div>
             <div class="img-man">
@@ -100,8 +108,8 @@
                     </div>
                 </div>
                 <div class="info-divs-wraper">
-                    <div class="hire">Hire Me!</div>
-                    <div class="about">About Me</div>
+                    <div class="hire"><a href="#">Hire Me!</a></div>
+                    <div class="about"><a href="#">About Me</a></div>
                 </div>
             </div>
         </div>
@@ -227,7 +235,7 @@
                         </div>
                         <div class="number1">
                             <h2>Call Me</h2>
-                            <p>+123 456 7890</p>
+                            <a href="tel:+123 456 7890"><p>+123 456 7890</p></a>
                         </div>
                     </div>
                     <div class="call">
@@ -236,7 +244,7 @@
                         </div>
                         <div class="number1">
                             <h2>Email</h2>
-                            <p>info@coder.com</p>
+                            <a href="mailto:info@coder.com"><p>info@coder.com</p></a>
                         </div>
                     </div>
                     <div class="call">
@@ -245,17 +253,17 @@
                         </div>
                         <div class="number1">
                             <h2>Address</h2>
-                            <p>27 Division St, New York,<p> NY 10002, USA</p></p>
+                            <a href="https://www.google.com/maps/place/27+Division+St,+New+York,+NY+10002,+%E1%83%90%E1%83%9B%E1%83%94%E1%83%A0%E1%83%98%E1%83%99%E1%83%98%E1%83%A1+%E1%83%A8%E1%83%94%E1%83%94%E1%83%A0%E1%83%97%E1%83%94%E1%83%91%E1%83%A3%E1%83%9A%E1%83%98+%E1%83%A8%E1%83%A2%E1%83%90%E1%83%A2%E1%83%94%E1%83%91%E1%83%98/@40.7139743,-73.9983047,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a263f3910db:0xd6e6cdf32a6b11b1!8m2!3d40.7139743!4d-73.996116" target="_blank"><p>27 Division St, New York,<p> NY 10002, USA</p></p></a>
                         </div>
                     </div>
                     <h1 class="find">Find Me on</h1>
                     <div class="icons-wraper">
                         <div class="wraper">
-                            <img class="social" src="img/behance.svg" alt="icon">
-                            <img class="social" src="img/dribbble.svg" alt="icon">
-                            <img class="social" src="img/insta.svg" alt="icon">
-                            <img class="social" src="img/linked in.svg" alt="icon">
-                            <img class="pint" src="img/pinterest.svg" alt="icon">
+                            <a href="https://www.behance.net/" target="_blank"><img class="social" src="img/behance.svg" alt="icon"></a>
+                            <a href="https://dribbble.com/" target="_blank"><img class="social" src="img/dribbble.svg" alt="icon"></a>
+                            <a href="https://www.instagram.com/" target="_blank"><img class="social" src="img/insta.svg" alt="icon"></a>
+                            <a href="https://www.linkedin.com/home" target="_blank"><img class="social" src="img/linked in.svg" alt="icon"></a>
+                            <a href="https://www.pinterest.com/" target="_blank"><img class="pint" src="img/pinterest.svg" alt="icon"></a>
                         </div>
                     </div>
                 </div>
