--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
 <body class="body">
     <header class="header-wraper">
             <ul class="logo">
-                <a href="#"> <img class="image" src="img/logo.svg" alt=""> </a>
+                <a href="#"><img class="image" src="img/logo.svg" alt=""></a>
             </ul>
             <div class="ul-wraper">
                 <ul id="menu" class="menu-ul">
-                    <li><a class="nav-a nav1" href="#about me">About Me</a></li>
+                    <li><a class="nav-a nav1" href="#aboutme">About Me</a></li>
                     <li><a class="nav-a nav2" href="#service">Services</a></li>
                     <li><a class="nav-a nav3" href="#portfolio">Portfolio</a></li>
                     <li><a class="nav-a" href="#slick">Testimonials</a></li>
-                    <li><a class="nav-a ab" href="#contact us">Contact Us</a></li>
-                    <div class="nav-li-wraper">
-                        <li><a class="nav-a a1" href="#">Hire Me!</a></li>
-                    </div>
+                    <li><a class="nav-a ab" href="#contactus">Contact Us</a></li>
+                    <li><a class="nav-a a1" href="#">Hire Me!</a></li>
                 </ul>
             </div>
             <div id="burger-menu" class="burger-icon">
                 <i class="fas fa-bars"></i>
             </div>    
     </header>
-    <section id="about me">
+    <section id="aboutme">
         <div class="section1-wraper">
             <div class="portfolio-wraper">
                 <div class="hello-wraper">
@@ -117,7 +115,7 @@
     <section id="service">
         <div class="container2">
             <h1>Our Services</h1>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore <p>veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p></p>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab illo inventore <p>veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p>
             <div class="service-wraper">
                 <div class="vertical1">
                     <div class="wordpress w1">
@@ -191,7 +189,7 @@
                         <div class="child-div">
                             <h1>John Doe</h1>
                             <h2>CEO Abc Company</h2>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p></p>
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p>
                         </div>
                         <img class="mask-image1" src="img/mask2.png" alt="image">
                     </div>
@@ -201,7 +199,7 @@
                         <div class="child-div">
                             <h1>John Doe</h1>
                             <h2>CEO Abc Company</h2>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p></p>
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p>
                         </div>
                         <img class="mask-image1" src="img/mask1.png" alt="image">
                     </div>
@@ -211,7 +209,7 @@
                         <div class="child-div">
                             <h1>John Doe</h1>
                             <h2>CEO Abc Company</h2>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p></p>
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti <p>atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique</p> <p>sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum</p> <p>facilis est et expedita distinctio.</p>
                         </div>
                         <img class="mask-image1" src="img/mask2.png" alt="image">
                     </div>
@@ -223,19 +221,19 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="slick.min.js"></script>
 	<script src="js/script.js"></script>
-    <footer id="contact us" class="footer">
+    <footer id="contactus" class="footer">
         <div class="container3">
             <div class="contact-wraper">
                 <div class="contact">
                     <h2>Contact Us</h2>
-                    <p>Let's make something new, different and more meaningful <p class="p2">or make thing more visual or conceptual?</p></p>
+                    <p>Let's make something new, different and more meaningful <p class="p2">or make thing more visual or conceptual?</p>
                     <div class="call">
                         <div class="icon1">
                             <img src="img/phone.svg" alt="icon">
                         </div>
                         <div class="number1">
                             <h2>Call Me</h2>
-                            <a href="tel:+123 456 7890"><p>+123 456 7890</p></a>
+                            <a href="tel:+1234567890"><p>+123 456 7890</p></a>
                         </div>
                     </div>
                     <div class="call">
@@ -253,7 +251,7 @@
                         </div>
                         <div class="number1">
                             <h2>Address</h2>
-                            <a href="https://www.google.com/maps/place/27+Division+St,+New+York,+NY+10002,+%E1%83%90%E1%83%9B%E1%83%94%E1%83%A0%E1%83%98%E1%83%99%E1%83%98%E1%83%A1+%E1%83%A8%E1%83%94%E1%83%94%E1%83%A0%E1%83%97%E1%83%94%E1%83%91%E1%83%A3%E1%83%9A%E1%83%98+%E1%83%A8%E1%83%A2%E1%83%90%E1%83%A2%E1%83%94%E1%83%91%E1%83%98/@40.7139743,-73.9983047,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a263f3910db:0xd6e6cdf32a6b11b1!8m2!3d40.7139743!4d-73.996116" target="_blank"><p>27 Division St, New York,<p> NY 10002, USA</p></p></a>
+                            <a href="https://www.google.com/maps/place/27+Division+St,+New+York,+NY+10002,+%E1%83%90%E1%83%9B%E1%83%94%E1%83%A0%E1%83%98%E1%83%99%E1%83%98%E1%83%A1+%E1%83%A8%E1%83%94%E1%83%94%E1%83%A0%E1%83%97%E1%83%94%E1%83%91%E1%83%A3%E1%83%9A%E1%83%98+%E1%83%A8%E1%83%A2%E1%83%90%E1%83%A2%E1%83%94%E1%83%91%E1%83%98/@40.7139743,-73.9983047,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a263f3910db:0xd6e6cdf32a6b11b1!8m2!3d40.7139743!4d-73.996116" target="_blank"><p>27 Division St, New York,<p> NY 10002, USA</p></a>
                         </div>
                     </div>
                     <h1 class="find">Find Me on</h1>
@@ -262,7 +260,7 @@
                             <a href="https://www.behance.net/" target="_blank"><img class="social" src="img/behance.svg" alt="icon"></a>
                             <a href="https://dribbble.com/" target="_blank"><img class="social" src="img/dribbble.svg" alt="icon"></a>
                             <a href="https://www.instagram.com/" target="_blank"><img class="social" src="img/insta.svg" alt="icon"></a>
-                            <a href="https://www.linkedin.com/home" target="_blank"><img class="social" src="img/linked in.svg" alt="icon"></a>
+                            <a href="https://www.linkedin.com/home" target="_blank"><img class="social" src="img/linkedin.svg" alt="icon"></a>
                             <a href="https://www.pinterest.com/" target="_blank"><img class="pint" src="img/pinterest.svg" alt="icon"></a>
                         </div>
                     </div>
@@ -277,7 +275,7 @@
                         <input class="input" type="text" placeholder="Phone#" required>
                         <input class="input2" type="email" placeholder="Budget" required>
                     </div>
-                    <input class="textarea" type="textarea" name="" id="textarea" placeholder="Message">
+                    <input class="textarea" type="textarea" name="textarea" id="textarea">
                     <button class="button">Submit</button>
                 </div>
             </div>
